Finalizacion del reto LiterAlura

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=literatura
+spring.datasource.url=jdbc:postgresql://localhost/{TABLENAME}
+spring.datasource.username={DBNAME}
+spring.datasource.password={PASSWORD}
+spring.datasource.drive-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
